CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Customer__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Contains the email to contact the customer</description>
    <inlineHelpText>Contains the email to contact the customer</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>