CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Customer__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Contains the external ID related to the customer, this external ID helps to find the user in Salesforce</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains the external ID related to the customer, this external ID helps to find the user in Salesforce</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>