CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contains the telephone number for the client</description>
    <inlineHelpText>Contains the telephone number for the client</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>